--- a/CSS/style.css
+++ b/CSS/style.css
@@ -60,6 +60,11 @@ img {
     object-fit: cover;
 }
 
+.pink {
+    color: #df49a6;
+    font-weight: 800;
+}
+
 main {
     margin-left: 5rem;
 }
@@ -109,10 +114,6 @@ main {
 
 #navbar .nav-item {
     width: 100%;
-}
-
-#navbar .nav-item:last-child {
-    margin-top: auto;
 }
 
 #navbar .nav-link {
@@ -189,7 +190,8 @@ main {
 }
 
 #hero .hero .Hello,
-#hero .hero .Im {
+#hero .hero .Im, 
+#hero .hero .titleName {
     font-family: 'Roboto', sans-serif;
     font-size: 6rem;
     font-weight: 600;
@@ -203,17 +205,13 @@ main {
     position: relative;
 }
 
-#hero .hero .Im .titleName {
+#hero .hero .titleName {
     -webkit-text-stroke: 2px #df49a6;
-    position: relative;
-}
-
-#hero .hero .Im .titleName::before {
-    color: #df49a6;
 }
 
 #hero .hero .Hello::before,
-#hero .hero .Im::before {
+#hero .hero .Im::before,
+#hero .hero .titleName::before {
     content: attr(data-text);
     position: absolute;
     top: 0;
@@ -224,25 +222,16 @@ main {
     -webkit-text-stroke: 0 white;
     border-right: 2px solid white;
     overflow: hidden;
-    animation: animate 3s linear forwards;
+    animation: animate 1.2s linear forwards;
 }
 
+#hero .hero .Im::before {
+    animation: animate2 2s linear forwards;
+}
 
-
-@keyframes animate {
-    0% {
-        width: 0;
-    }
-    50% {
-        width: 0;
-    }
-    99% {
-        border-right: 2px solid white;
-    }
-    100% {
-        width: 100%;
-        border-right: transparent;
-    }
+#hero .hero .titleName::before {
+    color: #df49a6;
+    animation: animate3 3s linear forwards;
 }
 
 #hero .hero .button {
@@ -260,8 +249,6 @@ main {
     border: .2rem solid white;
 }
 
-
-
 /* End of Hero Section */
 
 
@@ -270,7 +257,7 @@ main {
 
     /* Small Screens */
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 655px) {
 
     /* Global */
 
@@ -286,6 +273,7 @@ main {
         bottom: 0;
         width: 100vw;
         height: 5rem;
+        border-top: 3px solid var(--bg-secondary);
     }
 
     #navbar .logo {
@@ -320,7 +308,7 @@ main {
 
     /* Large Screens */
 
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 655px) {
 
     /* Navbar */
 
@@ -328,6 +316,7 @@ main {
         top: 0;
         width: 5rem;
         height: 100vh;
+        border-right: 3px solid var(--bg-secondary);
     }
 
     #navbar .navbar:hover {
@@ -339,9 +328,84 @@ main {
         display: inline-block;
     }
 
+    #navbar .nav-item:last-child {
+        margin-top: auto;
+        padding-bottom: 25px;
+    }
+
     /* End of Navbar */
 
 
 }
 
 /* End of Media Query */
+
+/* Keyframes */
+
+@keyframes animate {
+    0% {
+        width: 0;
+    }
+    50% {
+        width: 0;
+    }
+    99% {
+        border-right: 2px solid white;
+    }
+    100% {
+        width: 68%;
+        border-right: transparent;
+    }
+}
+
+@keyframes animate2 {
+    0% {
+        width: 0;
+        border-right: transparent;
+    }
+    50% {
+        width: 0;
+        border-right: transparent;
+    }
+    74% {
+        border-right: transparent;
+    }
+    75% {
+        width: 0;
+        border-right: 2px solid white;
+    }
+    99% {
+        border-right: 2px solid white;
+    }
+    100% {
+        width: 35%;
+        border-right: transparent;
+    }
+}
+
+@keyframes animate3 {
+    0% {
+        width: 0;
+        border-right: transparent;
+    }
+    50% {
+        width: 0;
+        border-right: transparent;
+    }
+    74% {
+        border-right: transparent;
+    }
+    75% {
+        width: 0;
+        border-right: 5px solid #df49a6;
+    }
+    99% {
+        border-right: 5px solid #df49a6;
+    }
+    100% {
+        width: 105%;
+        border-right: transparent;
+    }
+}
+
+/* End of Keyframes */
