--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,6 +3,8 @@
 /* Roboto | Regular Medium Bold */
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 
+/* Fedroka One | Regular */
+@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
 
 /* End of Fonts */
 
@@ -26,7 +28,7 @@
 }
 
 body::-webkit-scrollbar {
-    width: 0.25rem;
+    width: 0.4rem;
 }
 
 body::-webkit-scrollbar-track {
@@ -34,13 +36,13 @@ body::-webkit-scrollbar-track {
 }
 
 body::-webkit-scrollbar-thumb {
-    background: #6649b8;
+    background: #df4986;
+    border-radius: 2rem;
 }
 
 html {
     scroll-behavior: smooth;
 }
-
 
 a {
     text-decoration: none;
@@ -241,23 +243,102 @@ main {
 }
 
 #hero .hero .button .cta {
-    font-family: 'Roboto', sans-serif;
-    color: white;
-    font-size: 1.2rem;
+    font-family: 'Fredoka One', cursive;
+    color: #270c17;
+    font-size: 1.5rem;
     text-transform: uppercase;
-    padding: 10px;
-    border: .2rem solid white;
+    padding: 15px 35px;
+    border-radius: 10rem;
+    position: relative;
+    overflow: hidden;
+    transition: all .3s;
+    z-index: 1;
+}
+
+#hero .hero .button .cta:after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 10rem;
+    background-color: #df4986;
+    z-index: -2;
+}
+
+#hero .hero .button .cta:before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 0%;
+    height: 100%;
+    background-color: white;
+    transition: all .3s;
+    border-radius: 10rem;
+    z-index: -1;
+}
+
+#hero .hero .button .cta:hover:before {
+    color: #270c17;
+    width: 100%;
 }
 
 /* End of Hero Section */
 
 
+
+
 /* Media Query */
+
+    /* Very Small Screens */
+
+@media only screen and (max-width: 390px) {
+
+    /* Global */
+
+    main {
+        margin: 0;
+    }
+
+    /* End of Global */
+
+    /* Navbar */
+
+    #navbar .nav-link svg {
+        margin: 0;
+    }
+
+    /* End of Navbar */
+
+    /* Hero */
+
+    #hero .hero .Hello,
+    #hero .hero .Im, 
+    #hero .hero .titleName {
+        font-size: 3rem;
+        -webkit-text-stroke: 1px white;
+    }
+
+    #hero .hero .titleName {
+        -webkit-text-stroke: 1px #df49a6;
+    }
+
+    #hero .hero .button .cta {
+        font-size: 1rem;
+        padding: 1rem 1.5rem;
+    }
+
+    /* End of Hero */
+
+}
+    /* End of Very Small Screens */
 
 
     /* Small Screens */
 
-@media only screen and (max-width: 655px) {
+@media only screen and (max-width: 660px) {
 
     /* Global */
 
@@ -308,7 +389,7 @@ main {
 
     /* Large Screens */
 
-@media only screen and (min-width: 655px) {
+@media only screen and (min-width: 661px) {
 
     /* Navbar */
 
