--- a/CSS/style.css
+++ b/CSS/style.css
@@ -59,7 +59,7 @@ a {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding-bottom: 80px;
+    padding-bottom: 0;
 }
 
 img {
@@ -98,6 +98,11 @@ p {
     line-height: 2.5rem;
     font-weight: 300;
     letter-spacing: 0.02rem;
+}
+
+.icon {
+    width: 50px;
+    height: auto;
 }
 
 /* End of Global */
@@ -381,7 +386,7 @@ p {
 
 #services .service-item {
     margin: 0 auto;
-    padding: 0;
+    padding: .3rem;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -401,7 +406,7 @@ p {
     width: 100%;
     display: flex;
     justify-content: space-evenly;
-    padding-bottom: 5rem;
+    padding-bottom: 0;
 }
 
 #services #digitalart .service-item-header h1 {
@@ -410,6 +415,32 @@ p {
 
 /* End of Services Section */
 
+
+/* Projects Section */
+
+#projects .projects{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+}
+
+#projects .project-item {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin: 2rem auto;
+}
+
+#projects #easy-bank {
+    background: url(/Images/EasyBank.png);
+    width: 100%;
+    height: 100%;
+}
+
+/* End of Projects Section */
 
 
 
