--- a/CSS/style.css
+++ b/CSS/style.css
@@ -106,6 +106,58 @@ p {
     height: auto;
 }
 
+.button {
+    padding-top: 2rem;
+    display: flex;
+    justify-content: center;
+}
+
+.button .cta {
+    font-family: 'Fredoka One', cursive;
+    color: #270c17;
+    font-size: 1.5rem;
+    text-transform: uppercase;
+    padding: 15px 35px;
+    border-radius: 10rem;
+    position: relative;
+    overflow: hidden;
+    transition: all .3s;
+    z-index: 1;
+}
+
+.button .cta:after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 10rem;
+    overflow: hidden;
+    background-color: var(--pink-primary);
+    z-index: -2;
+}
+
+.button .cta:before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 0%;
+    height: 100%;
+    overflow: hidden;
+    background-color: white;
+    transition: all .3s;
+    border-radius: 10rem;
+    z-index: -1;
+}
+
+.button .cta:hover:before {
+    color: #270c17;
+    width: 100%;
+    overflow: hidden;
+}
+
 /* End of Global */
 
 
@@ -282,57 +334,6 @@ p {
     animation: animate3 3s linear forwards;
 }
 
-#hero .hero .button {
-    padding-top: 2rem;
-    display: flex;
-    justify-content: center;
-}
-
-#hero .hero .button .cta {
-    font-family: 'Fredoka One', cursive;
-    color: #270c17;
-    font-size: 1.5rem;
-    text-transform: uppercase;
-    padding: 15px 35px;
-    border-radius: 10rem;
-    position: relative;
-    overflow: hidden;
-    transition: all .3s;
-    z-index: 1;
-}
-
-#hero .hero .button .cta:after {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border-radius: 10rem;
-    overflow: hidden;
-    background-color: var(--pink-primary);
-    z-index: -2;
-}
-
-#hero .hero .button .cta:before {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 0%;
-    height: 100%;
-    background-color: white;
-    transition: all .3s;
-    border-radius: 10rem;
-    z-index: -1;
-}
-
-#hero .hero .button .cta:hover:before {
-    color: #270c17;
-    width: 100%;
-    overflow: hidden;
-}
-
 /* End of Hero Section */
 
 
@@ -367,7 +368,7 @@ p {
     letter-spacing: .15rem;
     text-transform: uppercase;
     color: white;
-    margin: 2rem auto;
+    margin: 5rem auto 3rem auto;
 }
 
 #services .service-item-header p {
@@ -412,11 +413,11 @@ p {
 }
 
 #services #digitalArt {
-    margin: 2rem auto auto auto;
+    margin: 5rem auto auto auto;
 }
 
 #services #illustration {
-    margin: auto auto 2rem auto;
+    margin: auto auto 3rem auto;
 
 }
 
@@ -552,7 +553,116 @@ p {
     flex-direction: column;
 }
 
+#contact .contact .contact-header {
+    margin: 4rem auto;
+}
+
+#contact .contact .contact-header .section-title {
+    margin: 10px auto;
+    justify-content: center;
+    align-items: center;
+}
+
+#contact .contact .contact-item {
+    font-family: 'Roboto', sans-serif;
+    color: white;
+    display: flex;
+    width: 100%;
+    max-width: 450px;
+    flex-direction: column;
+    justify-content: left;
+    padding: 1rem 2rem;
+    margin: 0 auto;
+}
+
+#contact .contact .contact-item .contact-text {
+    padding: .5rem 2rem .5rem 0;
+    margin: 0 auto;
+    width: 100%;
+    justify-content: center;
+}
+
+#contact .contact .contact-item input {
+    width: 300px;
+    height: 3rem;
+    border: 4px solid var(--pink-primary);
+    border-radius: 10px;
+    color: white;
+    background-color: var(--bg-primary);
+    padding-left: 10px;
+    margin: 0 auto;
+}
+
+#contact .contact .button {
+    z-index: 1;
+    margin: 0 auto 10rem;
+    height: 100%;
+}
+
 /* End of Contact Section */
+
+
+/* Footer Section */
+
+#footer {
+    background-color: var(--bg-secondary);
+}
+
+#footer .footer {
+    min-height: 200px;
+    flex-direction: column;
+    padding-top: 15px;
+    padding-bottom: 10px;
+    text-align: center;
+}
+
+#footer .brand {
+    font-size: 2rem;
+    font-family: 'Fredoka One', cursive;
+    text-transform: uppercase;
+    color: white;
+    font-size: 2rem;
+    letter-spacing: .2rem;
+}
+
+#footer h2 {
+    color: white;
+    font-weight: 500;
+    font-size: 1rem;
+    letter-spacing: .1rem;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+#footer .footer p {
+    font-size: 1rem;
+}
+
+#footer .social-icon {
+    display: flex;
+    margin-bottom: 5px;
+    justify-content: center;
+}
+
+#footer .social-item img {
+    width: auto;
+    height: 50px;
+    margin: 0 10px;
+    filter: grayscale(1);
+    transition: .3s ease filter;
+}
+
+#footer .social-item:hover img {
+    filter:grayscale(0);
+}
+
+#footer p {
+    color: white;
+    font-size: 1.3rem;
+    margin: 0 auto;
+}
+
+/* End of Footer Section */
 
 
 /* Media Query */
@@ -608,7 +718,8 @@ p {
     /* Global */
 
     main {
-        margin: 0;
+        margin-left: 0;
+        margin-bottom: 5rem;
     }
 
     /* End of Global */
@@ -680,6 +791,12 @@ p {
     }
 
     /* End of Navbar */
+
+    /* Services */
+
+    
+
+    /* End of Services */
 
 
 }
