--- a/CSS/style.css
+++ b/CSS/style.css
@@ -442,9 +442,9 @@ p {
 #services .services .services-right {
     width: 60%;
     height: 100%;
+    margin-right: 20rem;
     gap: 3rem;
     text-align: left;
-    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
